--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Макет 2 самостоятельно</title>
 
-  <link rel="stylesheet" href="/CSS/fonts.css">
-  <link rel="stylesheet" href="/CSS/reset.css">
-  <link rel="stylesheet" href="/CSS/style.css">
+  <link rel="stylesheet" href="./CSS/fonts.css">
+  <link rel="stylesheet" href="./CSS/reset.css">
+  <link rel="stylesheet" href="./CSS/style.css">
 
 </head>
 
